--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -556,8 +556,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5f3fb422",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'07/13/22'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 6.3.1 Plot Latitude vs. Temperature\n",
+    "# Import the time module.\n",
+    "import time\n",
+    "# Get today's date in seconds\n",
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "860f4242",
    "metadata": {},
    "outputs": [],
    "source": []
